linter: adds `predeclared` lint check to check for reserved keyword usage.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,6 +23,7 @@ linters:
     - misspell
     - nakedret
     - prealloc
+    - predeclared
     - exportloopref
     - staticcheck
     - structcheck
